[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Tarefas/EquaçãoPrimeiroGrau.gd" type="Script" id=1]

[node name="EquaçãoPrimeiroGrau" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Fundo" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.0
margin_top = -57.0
margin_right = -71.0
color = Color( 0.156863, 0.14902, 0.14902, 0.662745 )

[node name="FundoRes" type="ColorRect" parent="."]
margin_left = 218.0
margin_top = 147.0
margin_right = 235.0
margin_bottom = 158.0
color = Color( 0.12549, 0.113725, 0.113725, 0.729412 )

[node name="Numeros" type="VBoxContainer" parent="."]
margin_left = 65.0
margin_top = 141.0
margin_right = 133.0
margin_bottom = 233.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Numeros"]
margin_right = 68.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="Numeros/HBoxContainer"]
margin_right = 20.0
margin_bottom = 68.0

[node name="Button7" type="Button" parent="Numeros/HBoxContainer/VBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "7"

[node name="Button4" type="Button" parent="Numeros/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "4"

[node name="Button1" type="Button" parent="Numeros/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
text = "1"

[node name="VBoxContainer2" type="VBoxContainer" parent="Numeros/HBoxContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 68.0

[node name="Button8" type="Button" parent="Numeros/HBoxContainer/VBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
text = "8"

[node name="Button5" type="Button" parent="Numeros/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "5"

[node name="Button2" type="Button" parent="Numeros/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
text = "2"

[node name="VBoxContainer3" type="VBoxContainer" parent="Numeros/HBoxContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 68.0

[node name="Button9" type="Button" parent="Numeros/HBoxContainer/VBoxContainer3"]
margin_right = 20.0
margin_bottom = 20.0
text = "9"

[node name="Button6" type="Button" parent="Numeros/HBoxContainer/VBoxContainer3"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "6"

[node name="Button3" type="Button" parent="Numeros/HBoxContainer/VBoxContainer3"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
text = "3"

[node name="Button0" type="Button" parent="Numeros"]
margin_top = 72.0
margin_right = 68.0
margin_bottom = 92.0
text = "0"

[node name="Finalizar" type="Button" parent="."]
margin_left = 210.0
margin_top = 177.0
margin_right = 275.0
margin_bottom = 197.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Finalizar"

[node name="Equação" type="Label" parent="."]
margin_left = 117.0
margin_top = 159.0
margin_right = 157.0
margin_bottom = 173.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Resultado" type="Label" parent="."]
margin_left = 219.0
margin_top = 148.0
margin_right = 244.0
margin_bottom = 162.0
rect_scale = Vector2( 0.6, 0.6 )
clip_text = true

[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer2/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer2/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer3/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer3/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Numeros/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Finalizar" to="." method="_on_Finalizar_pressed"]
